--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         data-action="close-lightbox"
       ></button>
     </div>
-
-    <script src="gallery-items.js" type="module"></script>
+    
+    <script src="mygallary-markup.js" type="module"></script>
   </body>
 </html>
